--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^0.3.0",
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
     "next": "10.0.4",
@@ -15,6 +16,7 @@
     "react": "17.0.1",
     "react-custom-scroll": "^4.2.1",
     "react-dom": "17.0.1",
+    "rodal": "^1.8.1",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
