--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindui/react": "^0.1.1",
     "autoprefixer": "^10.1.0",
+    "material-tabs": "^0.0.8",
     "next": "10.0.4",
     "postcss": "^8.2.2",
     "react": "17.0.1",
