--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.1",
     "react-custom-scroll": "^4.2.1",
     "react-dom": "17.0.1",
+    "react-draggable": "^4.4.3",
     "react-skylight": "^0.5.1",
     "rodal": "^1.8.1",
     "tailwindcss": "^2.0.2"
